# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "bittorrent-starter-rust"
version = "0.1.0"
authors = ["funnyboy_roks <funnyboyroks@gmail.com>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
clap = { version = "4.0.32", features = ["derive"] }
hex = "0.4.3"
nom = "7.1.3"
nom-bufreader = "0.2.0"
rand = "0.8.5"
regex = "1"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_bencode = "0.2.3"
serde_bytes = "0.11.12"
serde_json = "1.0.105"
serde_urlencoded = "0.7.1"
sha1 = "0.10.1"
tempfile = "3"
thiserror = "1.0.38"
tokio = { version = "1.33.0", features = ["full"] }
